<resources>
    <string name="route_search_button_text">Routenplaner</string>
    <string name="home">Journey Home</string>
    <string name="about_us_devs">Entwickelt von Luca Mele und Armin Mattle</string>
    <string name="about_us_devs_mails">luca.mele@hsr.ch / armin.mattle@hsr.ch</string>
    <string name="hint_text_from">Von</string>
    <string name="loading">Suche läuft, bitte warten</string>
    <string name="connection_from">Start von</string>
    <string name="connection_to">Ankunft in</string>
    <string name="platform">mit Zug ab Gleis</string>
    <string name="bus">mit Bus</string>
    <string name="search_button_text">Suche</string>
    <string name="validation_text_search">Bitte füllen Sie Von / Bis aus</string>
    <string name="validation_text_search_no_locations">Keine Routen gefunden</string>
    <string name="hint_text_to">Bis</string>
    <string name="about_us">About Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Journey</string>
</resources>
